[package]
name = "gstreamer_media"
version = "0.1.0"
authors = ["Marek G <no@mail.com>"]

[dependencies]
failure = "0.1"
gstreamer = "0.14"
gstreamer-app = "0.14"
gstreamer-gl-sys = { path = "../gstreamer-gl-sys", version = "*" }
glib = "0.8"
glutin = "0.22.0-alpha3"
winit = "0.20.0-alpha4"

[target."cfg(target_os = \"linux\")".dependencies.x11-dl]
version = "2.18"

[build-dependencies]
pkg-config = "0.3"
