[package]
name = "gstreamer_media"
version = "0.1.0"
authors = ["Marek G <no@mail.com>"]
edition = "2018"

[dependencies]
gstreamer = "0.16"
gstreamer-app = "0.16"
gstreamer-gl-sys = { path = "../gstreamer-gl-sys", version = "*" }
glib = "0.10"
glutin = "0.24"
winit = "0.22"

[target."cfg(target_os = \"linux\")".dependencies.x11-dl]
version = "2.18"

[build-dependencies]
pkg-config = "0.3"
