[package]
name = "media_gstreamer"
version = "0.1.0"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "Multimedia player - gstreamer backend"
keywords = ["multimedia", "video", "audio", "player", "gstreamer"]
categories = ["multimedia"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/marek-g/rust-media"
documentation = "https://docs.rs/media_gstreamer"
readme = "../README.md"
edition = "2018"

[dependencies]
gstreamer = "0.16"
gstreamer-sys = "0.9"
gstreamer-app = "0.16"
gstreamer-gl = "0.16"
gstreamer-gl-sys = { version = "0.9", features = ["x11"] }
glib = "0.10"
glutin = "0.24"
winit = "0.22"

[target."cfg(target_os = \"linux\")".dependencies.x11-dl]
version = "2.18"

[build-dependencies]
pkg-config = "0.3"
