[package]
name = "media_gstreamer"
version = "0.2.0"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "Multimedia player - gstreamer backend"
keywords = ["multimedia", "video", "audio", "player", "gstreamer"]
categories = ["multimedia"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/marek-g/rust-media"
documentation = "https://docs.rs/media_gstreamer"
readme = "../README.md"
edition = "2021"

[dependencies]
gstreamer = "0.18"
gstreamer-sys = "0.18"
gstreamer-app = "0.18"
gstreamer-gl = "0.18"
gstreamer-gl-sys = "0.18"
gstreamer-gl-x11-sys = "0.18"
glib = "0.15"
glutin = "0.28"
winit = "0.26"

[target."cfg(target_os = \"linux\")".dependencies.x11-dl]
version = "2.19"

[build-dependencies]
pkg-config = "0.3"
